add new device button

--- a/front/index.html
+++ b/front/index.html
@@ -51,6 +51,7 @@
         </tbody>
       </table>
       <button onclick="queryDevices()">查询设备信息</button>
+      <button onclick="newDevices()">创建新设备</button>
     </div>
 
     <!-- OTA软件 -->
