+ delete and edit

--- a/front/index.html
+++ b/front/index.html
@@ -30,6 +30,7 @@
             <th>SW_Version</th>
             <th>Current_Partition</th>
             <th>Connection</th>
+            <th>Edit</th>
           </tr>
         </thead>
         <tbody id="devices-tbody">
