update sw edit in front

--- a/front/index.html
+++ b/front/index.html
@@ -49,8 +49,9 @@
           <tr>
             <th>版本编号</th>
             <th>生成日期</th>
-            <th>适用硬件版本</th>
             <th>变化点</th>
+            <th>校验值</th>
+            <th>Edit</th>
           </tr>
         </thead>
         <tbody id="software-tbody">
