--- a/front/index.html
+++ b/front/index.html
@@ -64,6 +64,8 @@
       <h4>上传新固件</h4>
       <input type="file" id="firmwareFile" />
       <input type="text" id="firmwareVersion" placeholder="版本号 (如 v1.3.0)" />
+      <input type="text" id="firmwareMD5" placeholder="md5" />
+      <input type="text" id="changenote" placeholder="SW Change Note " />
       <button onclick="uploadFirmware()">上传固件</button>
     </div>
 
