add statistic button

--- a/front/index.html
+++ b/front/index.html
@@ -89,6 +89,7 @@
       </table>
       <button onclick="refreshTask()">Task_Fresh</button>
       <!-- add chart-->
+      <button onclick="showStats()">统计结果</button>
       <canvas id="updateChart" width="800" height="400"></canvas>
     </div>
   </div>
@@ -96,4 +97,5 @@
   <script src="js/app.js"></script>
 </body>
 </html>
+
 
